--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
+    "@types/bun": "^1.3.4",
     "@types/marked": "^6.0.0",
     "@types/qs": "^6.9.16"
   }
